feat: update realm settings
