# core/src/infrastructure/realm/repositories/realm_postgres_repository.rs
@@ -147,6 +147,8 @@ impl RealmRepository for PostgresRealmRepository {
         user_registration_enabled: Option<bool>,
         forgot_password_enabled: Option<bool>,
         remember_me_enabled: Option<bool>,
+        magic_link_enabled: Option<bool>,
+        magic_link_ttl_minutes: Option<u32>,
     ) -> Result<RealmSetting, CoreError> {
         let realm_setting = crate::entity::realm_settings::Entity::find()
             .filter(crate::entity::realm_settings::Column::RealmId.eq::<Uuid>(realm_id.into()))
@@ -171,6 +173,14 @@ impl RealmRepository for PostgresRealmRepository {
 
         if let Some(remember_me_enabled) = remember_me_enabled {
             realm_setting.remember_me_enabled = Set(remember_me_enabled);
+        }
+
+        if let Some(magic_link_enabled) = magic_link_enabled {
+            realm_setting.magic_link_enabled = Set(magic_link_enabled);
+        }
+
+        if let Some(magic_link_ttl_minutes) = magic_link_ttl_minutes {
+            realm_setting.magic_link_ttl_minutes = Set(magic_link_ttl_minutes as i32);
         }
 
         let realm_setting = realm_setting
